--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME="Film Reviews"
+APP_VERSION=v3.0.0
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:jcaTurnQgUePrcNIX0MHxjXIyNXHNom3hvzd8OZLpsA=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://localhost
 TIMEZONE="+00:00"
 
 APP_LOCALE=en
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=mariadb-11.2
+DB_PORT=3306
+DB_DATABASE=filmreviews
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
